NEW: Added the guts of the logic

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   },
   "require": {
     "php": "^7|^8",
+    "guzzlehttp/guzzle": "^7",
     "silverstripe/cms": "^4",
     "symbiote/silverstripe-queuedjobs": "^4"
   },
